<package format="2">
  <name>pgi140</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description and controler package for PGI140</p>
    <p>This package contains configuration data, 3D models, controler and launch files for pgi140 gripper</p>
  </description>
  <author>tangxs</author>
  <maintainer email="ustcert@mail.ustc.edu.cn" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <depend>roscpp</depend>
  <depend>serial</depend>
  <export>
    <architecture_independent />
  </export>
</package>